# WebSocket-JSON-RPC-2.0

./: README.md
midll_test/: CMakeLists.txt  main.cpp  запросы на проверку работы сервера.txt
